fix: set the min width/height to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -47,8 +47,8 @@ button {
     font-size: 16px;
     padding: 12px 60px;
     border-radius: 6px;
-    width: 100px;
-    height: 20px;
+    min-width: 100px;
+    min-height: 20px;
     text-align: center;
 }
 
